<resources>
    <string name="app_name">OSHA Heat Safety Tool</string>
    <string name="txtAppTitle">Heat Safety Tool</string>
    <string name="txtTemperature">Temperature</string>
    <string name="txtHumidity">Humidity</string>
    <string name="txtF">°F</string>
    <string name="txtPercentage">%</string>
    <string name="btnCurrent">Get Current</string>
    <string name="btnDayMax">Get Today Max</string>
    <string name="btnCalc">Calculate</string>
    <string name="txtHeatIndex">Heat Index</string>
    <string name="txtRiskLvl">Risk Level</string>
    <string name="txtTime">NOAA Data Time </string>
    <string name="txtPrecautions">Precautions</string>
    <string name="txtWorker">Worker</string>
    <string name="txtSupervisor">Supervisor</string>
    <string name="btnBottomMenuHome">Home</string>
    <string name="btnBottomMenuBack"> &#171; Back</string>
    <string name="btnBottomMenuMainmenu">More Info</string>
    <string name="btnBack">	&#171; Back</string>
    <string name="txtDisclaimer">The U.S. Department of Labor (DOL) is providing this App as a public service. This App is advisory in nature and informational in content. It is not a standard or regulation, and it neither creates new legal obligations nor alters existing obligations created by OSHA standards or the Occupational Safety and Health Act. Pursuant to the OSH Act, employers must comply with safety and health standards and regulations issued and enforced either by OSHA or by an OSHA-approved State Plan. In addition, the Act\'s General Duty Clause, Section 5(a)(1), requires employers to provide their employees with a workplace free from recognized hazards likely to cause death or serious physical harm.\n\nThis App is a service that is continually under development and it does not include every possible heat-related situation encountered in the workplace. The user should be aware that, while OSHA will try to keep the information timely and accurate, there may be a delay between official publication of OSHA materials and the modification of this App. The Federal Register and the Code of Federal Regulations remain the official sources for regulatory information published by OSHA. Further, the calculations performed by this App rely on the accuracy of the data provided by the user. Therefore, OSHA cannot guarantee that these calculations accurately reflect conditions at a particular worksite.\n\nThis App can, at the user\'s discretion, obtain weather-related data directly from the National Oceanic and Atmospheric Administration (NOAA) based on the user\'s current location (for GPS-enabled phones). The information transmitted to NOAA through this App, including the user\'s location, is only used to generate data to transmit to the user through the App and is not retransmitted to OSHA or any other entity for any other purpose.\n\n\n</string>
	<string name="txtContact1">If you have questions, call OSHA. It\'s confidential. Call <a href="tel:18003216742">1-800-321-OSHA</a> (6742) or visit <a href="http://www.osha.gov">www.osha.gov</a> to learn more about heat illness.</string>
	<string name="txtContact1_screenreader">If you have questions, call OSHA. It\'s confidential. Call <a href="tel:18003216742">1-800-321-6742</a> or visit www.osha.gov to learn more about heat illness.</string>
	<string name="txtContact2">For worker fact sheets, worksite posters, training materials, and other resources on preventing heat illness in outdoor workers, in both English and Spanish, see <a href="http://osha.gov/SLTC/heatillness/">OSHA\'s heat illness web page</a>.\n\nFor other valuable worker protection information, such as Workers\' Rights, Employer Responsibilities, and other services OSHA offers, visit <a href="http://osha.gov/workers.html">OSHA\'s Workers\' web page</a>.</string>
	<string name="txtContact2_screenreader">For worker fact sheets, worksite posters, training materials, and other resources on preventing heat illness in outdoor workers, in both English and Spanish, see OSHA\'s heat illness web page at www.osha.gov/SLTC/heatillness.\n\nFor other valuable worker protection information, such as Workers\' Rights, Employer Responsibilities, and other services OSHA offers, visit OSHA\'s Workers\' web page at www.osha.gov/workers.html.</string>
	<string name="info_heat_stroke"><b><u>Heat stroke</u></b></string>
	<string name="info_heat_exhaustion"><b><u>Heat exhaustion</u></b></string>
	<string name="info_heat_cramps"><b><u>Heat cramps</u></b></string>
	<string name="info_heat_rash"><b><u>Heat rash</u></b></string>
	<string name="firstaid"><u>First Aid</u></string>
	<string name="signs_heat_stroke">Heat stroke symptoms: red, hot, dry skin or excessive sweating, very high body temperature, confusion, seizures, and fainting.</string>
	<string name="signs_heat_exhaustion">Heat exhaustion symptoms: cool, moist skin, heavy sweating, headache, nausea or vomiting, dizziness, light headedness, weakness, thirst, irritability, and fast heart beat.</string>
	<string name="signs_heat_cramps">Heat cramps symptoms: muscle spasms, pain, usually in abdomen, arms, or legs.</string>
	<string name="signs_heat_rash">Heat rash symptoms: clusters of red bumps on skin, and often appears on neck, upper chest, folds of skin.</string>
	<string name="firstaid_heat_stroke">Heat stroke first aid: HEAT STROKE IS A MEDICAL EMERGENCY. Call 911. While waiting for help: Place worker in shady, cool area, Loosen clothing, remove outer clothing, Fan air on worker; cool packs in armpits, Wet worker with cool water; apply ice packs, cool compresses, or ice if available, Provide fluids (preferably water) as soon as possible, and Stay with worker until help arrives.</string>
	<string name="firstaid_heat_exhaustion">Heat exhaustion first aid: Have worker sit or lie down in a cool, shady area, Give worker plenty of water or other cool beverages to drink, Cool worker with cold compresses/ice packs, Take to clinic or emergency room for medical evaluation and treatment if signs or symptoms worsen or do not improve within 60 minutes, and Do not return to work that day.</string>
	<string name="firstaid_heat_cramps">Heat cramps first aid: Have worker rest in shady, cool area, Have worker drink water or other cool beverages, Wait a few hours before allowing worker to return to heavy work, and Seek medical attention if cramps don\'t go away.</string>
	<string name="firstaid_heat_rash">Heat rash first aid: Try to work in a cooler, less humid environment when possible, and Keep the affected area dry.</string>
	<string name="detail1"><b><u>Drink water</u> throughout the day.</b>\n\n<li>Estimate how much water will be needed and decide who will obtain and check on water supplies.</li>\n<li>Guidelines recommend that outdoor workers drink 4 cups (8 cones) of water every hour, even if they\'re not thirsty.</li>\n<li>It is best to drink a small amount of water often, like 1 cup (2 cones) every 15 minutes.</li>\n<li>Avoid alcohol and drinks with caffeine or sugar.</li>\n<li>Generally, fluid intake should not exceed 6 cups per hour.</li></string>
	<string name="detail2"><b><u>Know what to do in an emergency.</u></b> Have a plan in case a worker experiences heat-related illness. Everyone onsite should know the procedures for responding to possible heat illness:\n\n<li>What steps to follow if a worker has signs of heat illness.</li>\n<li>Who to call for medical help and how to give clear directions to the worksite if calling 911.</li>\n<li>Who will provide first aid until the ambulance arrives.</li></string>
	<string name="detail3"><b><u>Train workers</u></b> before hot outdoor work begins. Tailor training to cover worksite-specific conditions. Address the following topics:\n\n<li>Risk factors for heat-related illness.</li>\n<li>Different types of heat-related illness and how to recognize them.</li>\n<li>Heat-related illness prevention procedures, including drinking water.</li>\n<li>Importance of acclimatization and how your worksite procedures address it.</li>\n<li>The importance and method of responding to possible heat-related illness, including immediately reporting signs or symptoms to the supervisor.</li>\n<li>Procedures to follow when contacting emergency medical services, including providing clear directions to the worksite.</li></string>
	<string name="detail4"><b><u>Pace the work and build up gradually to the heaviest work</u></b> (called <b>acclimatization</b>). People can, to a large extent, adjust to heat. Some important reminders:\n\n<li>New workers and those returning from an absence of two or more weeks should have a 5-day minimum adjustment period.</li>\n<li>Closely supervise new employees for the first 14 days or until they are fully acclimatized.</li>\n<li>Some workers require up to 2-3 weeks to fully acclimatize.</li>\n<li>Acclimatization is essential for all workers during a heat wave.</li>\n<li>When possible, allow only acclimatized workers to perform the more strenuous tasks.</li></string>
	<string name="detail5"><b><u>Modify work/rest periods</u></b> to give the body a chance to get rid of excess heat. Assign new and un-acclimatized workers lighter work and longer rest periods. Shorten work periods and increase rest periods:\n\n<li>As temperature, humidity, and sunshine increase.</li>\n<li>When there is no air movement or if protective clothing or gear is worn.</li>\n<li>For heavier work.</li></string>
	<string name="detail6"><b><u>Monitor workers</u></b> for signs and symptoms of heat illness.\n\n<li>Check routinely to make sure workers are making use of water and shade and not experiencing heat-related symptoms.</li>\n<li>Monitor new workers and unacclimatized workers more closely.</li>\n<li>For workers wearing heavy or non-breathable clothing or during extreme heat conditions, check for physical signs (e.g., body temperature, heart rate) of possible over exposure to the heat.</li>\n\n</string>
	<string name="Precautions">Precautions</string>
	<string name="ModIntro">Workers can be at increased risk for heat illness. Important reminders:\n</string>
	<string name="mod1header"><b>Water and shade:</b></string>
	<string name="mod1"><li>Drinking water must be on site.</li>\n<li>Drink plenty of water, even if you’re not thirsty – every 15 minutes (about 4 cups/hour).</li>\n<li>Set up cool, shaded rest areas.</li></string>
	<string name="mod2header"><b>Emergency planning and response:</b></string>
	<string name="mod2"><li>Make sure medical help (clinic, hospital, emergency services) is nearby – if not, first aid must be on site.</li>\n<li>Call 911 and cool a worker who is unconscious, confused, or uncoordinated. This may be heat stroke, which is a medical emergency.</li>\n<li>Know where you are in case you need to call 911.</li></string>
	<string name="mod3header"><b>Work and rest:</b></string>
	<string name="mod3a"><li>Schedule frequent breaks in cool, shaded area.</li></string>
	<string name="mod3b"><li>Gradually build up workload and allow more breaks over the first week for new or returning workers (acclimatize workers).</li>\n<li>Use more precautions for heavy work, layers of protective clothing, and work in the direct sun:\n• Schedule activities at a time when the heat index is lower.\n• Develop and follow work/rest schedules (amount of work time and rest time each work hour).\n• Decrease the pace of heavy job tasks.\n• Monitor workers closely for signs of heat illness.</li>\n<li>Use sunscreen and wear light-colored clothing.</li></string>
	<string name="mod4header"><b>Training:</b></string>
	<string name="mod4"><li>Make sure everyone reviews heat-related illness topics:\n• How to recognize heat-related illness.\n• How to prevent it.\n• What to do if someone gets sick.</li></string>
	<string name="mod5header"><b>Watching out for heat illness</b></string>
	<string name="mod5"><li>Watch out for each other.</li>\n<li>Set up a buddy system.</li></string>
</resources>