<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff">
 
    <!-- Application Title -->
    <LinearLayout
    	android:orientation="horizontal"
        android:id="@+id/heatindextitle"
        android:background="@drawable/heatindextitle"
        style="@style/AppTitleContainer" 
        android:layout_alignParentTop="true">
        <ImageView   
			android:layout_height="20dp"
			android:layout_width="69dp"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:src="@drawable/osha"
			android:contentDescription="osha" />
		<TextView
			android:id="@+id/AppTitle"
	        android:text="@string/txtAppTitle"
			android:contentDescription="@string/txtAppTitle"
	        style="@style/AppTitle" />
	    <ImageView   
        	android:layout_height="35dp"
			android:layout_width="68.9655172dp"
			android:layout_marginLeft="10dp"
			android:src="@drawable/dol"
			android:contentDescription="" />
    </LinearLayout>
    <!-- /End Application Title -->
    
    <!-- Everything Between Title and Bottom Menu Bar -->
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:padding="10dp">
      
	<!--  Page title -->   
	<TextView  
	    android:id="@+id/titletxt"
	    style="@style/TitleBox"
	    android:layout_marginTop="30dp"
	    android:layout_marginBottom="10dp"
	    android:focusable="true"
	    android:nextFocusDown="@+id/detail1"
		android:nextFocusRight="@+id/detail1"/> 

			<ScrollView 
	    	android:layout_marginBottom="50dp" 
	    	android:id="@+id/infotips"  
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content" 
	    	android:isScrollContainer="true"> <!-- This makes the main area scrollable -->		
						
				<LinearLayout android:orientation="vertical"
				android:layout_width="wrap_content"  
				android:layout_height="wrap_content">
					
            	<!--  basic tips -->
            	<TextView
            		android:id="@+id/detail1"
            		android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/detail1"
					android:contentDescription="@string/detail1"
					android:focusable="true" />            		
           		
           		<View style="@style/hrGrey" />	 	
           		
           		<TextView
            		android:id="@+id/detail2"
            		android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/detail2"
					android:contentDescription="@string/detail2"
					android:focusable="true" />  
					
				<View style="@style/hrGrey" />	 	
           		
           		<TextView
            		android:id="@+id/detail3"
            		android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/detail3"
					android:contentDescription="@string/detail3"
					android:focusable="true" />  
					
				<View style="@style/hrGrey" />	 	
           		
           		<TextView
            		android:id="@+id/detail4"
            		android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/detail4"
					android:contentDescription="@string/detail4"
					android:focusable="true" />  
					
				<View style="@style/hrGrey" />	 	
           		
           		<TextView
            		android:id="@+id/detail5"
            		android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/detail5"
					android:contentDescription="@string/detail5"
					android:focusable="true" />   
					
				<View style="@style/hrGrey" />	 	
           		
           		<TextView
            		android:id="@+id/detail6"
            		android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/detail6"
					android:contentDescription="@string/detail6"
					android:focusable="true" />              	
 
	    </LinearLayout>
		</ScrollView>		
	</LinearLayout>	
	
	<!-- Bottom Menu Bar -->
	<LinearLayout 
	    	android:background="@drawable/bottom_menu_bg"
			android:gravity="bottom"
	    	android:layout_height="45dp"
	    	android:layout_width="fill_parent"	
	    	android:layout_alignParentBottom="true">
	        	<Button 
	            	android:text="@string/btnBottomMenuHome" 
					android:contentDescription="@string/btnBottomMenuHome"
	                android:id="@+id/home_button" 
	                android:background="@drawable/bottom_menu_btn"
	                style="@style/BottomMenuBtn" />
	            <Button 
	            	android:text="@string/btnBottomMenuBack"
					android:contentDescription="@string/btnBottomMenuBack" 
	                android:id="@+id/back_button" 
	                android:background="@drawable/bottom_menu_btn"
	                style="@style/BottomMenuBtn" />
	            <Button 
	            	android:text="@string/btnBottomMenuMainmenu"
					android:contentDescription="@string/btnBottomMenuMainmenu" 
	            	android:id="@+id/main_button" 
	            	android:background="@drawable/bottom_menu_btn"
	            	style="@style/BottomMenuBtn" />
	</LinearLayout>
	<!-- /End Bottom Menu Bar -->
</RelativeLayout>
