<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff">
 
    <!-- Application Title -->
    <LinearLayout
    	android:orientation="horizontal"
        android:id="@+id/heatindextitle"
        android:background="@drawable/heatindextitle"
        style="@style/AppTitleContainer" 
        android:layout_alignParentTop="true">
        <ImageView   
			android:layout_height="20dp"
			android:layout_width="69dp"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:src="@drawable/osha"
			android:contentDescription="osha" />
		<TextView
			android:id="@+id/AppTitle"
	        android:text="@string/txtAppTitle"
			android:contentDescription="@string/txtAppTitle"
	        style="@style/AppTitle" />
	    <ImageView   
        	android:layout_height="35dp"
			android:layout_width="68.9655172dp"
			android:layout_marginLeft="10dp"
			android:src="@drawable/dol"
			android:contentDescription="" />
    </LinearLayout>
    <!-- /End Application Title -->
	
	<!-- Everything Between Title and Bottom Menu Bar -->
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="35dp"
      android:padding="10dp">
      
	    <LinearLayout
	      	android:orientation="horizontal"
	      	android:layout_width="fill_parent"
	      	android:layout_height="wrap_content"
	      	android:paddingBottom="5dp">
		<TextView  
			android:id="@+id/title"
	    	android:text="@string/Precautions"
	    	style="@style/TitleBox"
	    	android:contentDescription="@string/Precautions"
			android:focusable="true"
	    	android:nextFocusDown="@+id/risklevel"
			android:nextFocusRight="@+id/risklevel" />
		</LinearLayout>
	
    	<LinearLayout
    		android:id="@+id/supervisorrisklevelresult"
      		android:orientation="horizontal"
      		android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:paddingTop="15dp"
      		android:paddingBottom="15dp">
      		<TextView  	
      			android:id="@+id/risklevel" 
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:text="Risk Level:"
	    		android:contentDescription="Risk Level"
	    		android:paddingRight="10dp"
	    		android:focusable="true"
                android:nextFocusDown="@+id/view1"
                android:nextFocusRight="@+id/view1"
                android:nextFocusUp="@+id/title"
                android:nextFocusLeft="@+id/title" />  
			<TextView  	 
				android:id="@+id/view1"   
	    		android:layout_width="fill_parent" 
	    		android:layout_height="wrap_content" 
	    		android:gravity="center"
	    		android:focusable="true"
                android:nextFocusDown="@+id/ModIntro"
                android:nextFocusRight="@+id/ModIntro"
                android:nextFocusUp="@+id/risklevel"
                android:nextFocusLeft="@+id/risklevel" />  
	    </LinearLayout>
    	
    	<ScrollView 
	    	android:layout_marginBottom="50dp" 
	    	android:layout_below="@id/supervisorrisklevelresult" 
	    	android:id="@+id/workertips"  
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content" 
	    	android:isScrollContainer="true"> <!-- This makes the main area scrollable -->
	    	
			<LinearLayout 
				android:orientation="vertical"  
				android:layout_width="fill_parent"  
				android:layout_height="wrap_content"
				android:gravity="center">  
							
				<!-- Moderate -->
				<LinearLayout
					android:id="@+id/Moderate"
					android:orientation="vertical"  
					android:layout_width="fill_parent"  
					android:layout_height="wrap_content">
				<TextView
					android:id="@+id/ModIntro"
					android:layout_width="wrap_content"  
					android:layout_height="wrap_content"
					android:text="@string/ModIntro"
					android:contentDescription="@string/ModIntro"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod1header"
                	android:nextFocusRight="@+id/mod1header" />  
				<!-- mod 1 -->
				<TextView
					android:id="@+id/mod1header"
					style="@style/TipBox"
					android:text="@string/mod1header"
					android:contentDescription="@string/mod1header"
					android:background="#ffd39b"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod1"
                	android:nextFocusRight="@+id/mod1" />
				<TextView
					android:id="@+id/mod1"
					style="@style/TipBox"
					android:text="@string/mod1"
					android:contentDescription="@string/mod1"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod2header"
                	android:nextFocusRight="@+id/mod2header" />  
					<ImageView
					android:id="@+id/mod1_img"
					android:src="@drawable/img8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription=""  />	
				<!-- mod 2 -->
				<TextView
					android:id="@+id/mod2header"
					style="@style/TipBox"
					android:text="@string/mod2header"
					android:contentDescription="@string/mod2header"
					android:background="#ffd39b"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod2"
                	android:nextFocusRight="@+id/mod2" />	
				<TextView
					android:id="@+id/mod2"
					style="@style/TipBox"
					android:text="@string/mod2"
					android:contentDescription="@string/mod2"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod3header"
                	android:nextFocusRight="@+id/mod3header" />   
					<ImageView
					android:id="@+id/mod2_img"
					android:src="@drawable/img9"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription=""  />
				<!-- mod 3 -->	
				<TextView
					android:id="@+id/mod3header"
					style="@style/TipBox"
					android:text="@string/mod3header"
					android:contentDescription="@string/mod3header"
					android:background="#ffd39b"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod3a"
                	android:nextFocusRight="@+id/mod3a" />   	
				<TextView
					android:id="@+id/mod3a"
					style="@style/TipBox"
					android:text="@string/mod3a"
					android:contentDescription="@string/mod3a"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod3b"
                	android:nextFocusRight="@+id/mod3b"/>   	
				<ImageView
					android:id="@+id/mod3a_img"
					android:src="@drawable/img5"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription=""  />
				<TextView
					android:id="@+id/mod3b"
					style="@style/TipBox"
					android:text="@string/mod3b"
					android:contentDescription="@string/mod3b"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod4header"
                	android:nextFocusRight="@+id/mod4header" />   
				<ImageView
					android:id="@+id/mod3b_img"
					android:src="@drawable/img2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription=""  />
					
				<!-- mod 4 -->	
				<TextView
					android:id="@+id/mod4header"
					style="@style/TipBox"
					android:text="@string/mod4header"
					android:contentDescription="@string/mod4header"
					android:background="#ffd39b"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod4"
                	android:nextFocusRight="@+id/mod4" />  
				<TextView
					android:id="@+id/mod4"
					style="@style/TipBox"
					android:text="@string/mod4"
					android:contentDescription="@string/mod4"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod5header"
                	android:nextFocusRight="@+id/mod5header" />   
					<ImageView
					android:id="@+id/mod4_img"
					android:src="@drawable/img7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription=""  />
					
				<!-- mod 5 -->	
				<TextView
					android:id="@+id/mod5header"
					style="@style/TipBox"
					android:text="@string/mod5header"
					android:contentDescription="@string/mod5header"
					android:background="#ffd39b"
					android:focusable="true"
                	android:nextFocusDown="@+id/mod5"
                	android:nextFocusRight="@+id/mod5" /> 
				<TextView
					android:id="@+id/mod5"
					style="@style/TipBox"
					android:text="@string/mod5"
					android:contentDescription="@string/mod5"
					android:focusable="true"
                	android:nextFocusDown="@+id/home_button"
                	android:nextFocusRight="@+id/home_button" /> 
				<ImageView
					android:id="@+id/mod5_img"
					android:src="@drawable/img3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:contentDescription=""  />
				</LinearLayout>	
				
			</LinearLayout>  	    
		</ScrollView>
    	
	</LinearLayout>
    
    <!-- Bottom Menu Bar -->
	<LinearLayout 
	    	android:background="@drawable/bottom_menu_bg"
			android:gravity="bottom"
	    	android:layout_height="45dp"
	    	android:layout_width="fill_parent"	
	    	android:layout_alignParentBottom="true">
	        	<Button 
	            	android:text="@string/btnBottomMenuHome"
					android:contentDescription="@string/btnBottomMenuHome" 
	                android:id="@+id/home_button" 
	                android:background="@drawable/bottom_menu_btn"
	                style="@style/BottomMenuBtn" />
	            <Button 
	            	android:text="@string/btnBottomMenuBack"
					android:contentDescription="@string/btnBottomMenuBack" 
	                android:id="@+id/back_button" 
	                android:background="@drawable/bottom_menu_btn"
	                style="@style/BottomMenuBtn" />
	            <Button 
	            	android:text="@string/btnBottomMenuMainmenu" 
					android:contentDescription="@string/btnBottomMenuMainmenu"
	            	android:id="@+id/main_button" 
	            	android:background="@drawable/bottom_menu_btn"
	            	style="@style/BottomMenuBtn" />
	</LinearLayout>
	<!-- /End Bottom Menu Bar -->
    		
</RelativeLayout>
